--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -196,6 +196,7 @@
 }
 
 .positioner {
+  z-index: 1000;
   outline: 0;
 }
 
